# deployml

./: .gitattributes  .gitignore  404.html  README.md  README_vm_FEAST.md  VM_SETUP_ANALYSIS.md  create_dataset.py  drift_detection.ipynb  feature_importance.csv  gcp-cloud-vm-postgres-sample.yaml  gcp-cloud-vm-sample.yaml  gcp-cloud-vm-wandb-sample.yaml  gcp-sample.yaml  index.html  mkdocs.yml  model_registration.ipynb  model_template.ipynb  pyproject.toml  register_model.ipynb  sandbox.ipynb  sitemap.xml  terraform.tfstate.1751577780.backup  terraform.tfstate.1751579709.backup  test-cloud-vm.sh  test-cloud-vm.tf  test-cloud-vm.tfvars  test-cloud-vm.yaml  test-mlflow-setup.sh  test_feast_connection.py
.deployml/gcp-mlops-stack-mlflow/terraform/: main.tf  terraform.tfvars  variables.tf
.deployml/gcp-mlops-stack-mlflow/terraform/modules/mlflow/cloud/gcp/cloud_run/: main.tf  variables.tf
.github/workflows/: deploy-docs.yml  test-pypi.yml
api/overview/: index.html
changelog/: index.html
contributing/: index.html
data/: house_data.parquet
docs/: index.md
example/config/: gcp-cloud-vm-sample.yaml
experiment/: example_repo.py  feature_store.py  feature_store.yaml  house_data.csv  test.py
experiment/data/: driver_stats.parquet  house_data.parquet  registry.db
experiment/upright_octopus/: create_dataset.py
experiment/upright_octopus/feature_repo/: example_repo.py  feature_store.yaml  test.py
experiment/upright_octopus/feature_repo/data/: driver_stats_historical.parquet  online_store.db  registry.db
faq/: index.html
features/costs/: index.html
features/overview/: index.html
features/pipeline/: index.html
installation/: index.html
notebooks/: notebook_cli_demo.ipynb
search/: search_index.json
src/deployml/cli/: cli.py
src/deployml/enum/: cloud_provider.py  deployment_type.py
src/deployml/notebook/: stack.py  urls.py
src/deployml/templates/: main.tf.j2  variables.tf.j2
src/deployml/templates/docker/: README.md  docker-compose.yml
src/deployml/templates/docker/fastapi/: Dockerfile  main.py
src/deployml/templates/docker/mlflow/: Dockerfile
src/deployml/templates/fastapi/: README.md  main.py
src/deployml/templates/gcp/cloud_run/: main.tf.j2  mlflow_main.tf.j2  terraform.tfvars.j2  variables.tf.j2  wandb_main.tf.j2
src/deployml/templates/gcp/cloud_vm/: main.tf.j2  modular_main.tf.j2.backup  terraform.tfvars.j2  variables.tf.j2
src/deployml/terraform/: main.tf  terraform.tfvars  variables.tf
src/deployml/terraform/modules/cloud_sql_postgres/: main.tf  outputs.tf
src/deployml/terraform/modules/fastapi/cloud/gcp/cloud_run/: main.tf  outputs.tf  variables.tf
src/deployml/terraform/modules/fastapi/cloud/gcp/cloud_vm/: main.tf  outputs.tf  variables.tf
src/deployml/terraform/modules/feast/cloud/gcp/cloud_run/: main.tf  outputs.tf  variables.tf
src/deployml/terraform/modules/feast/cloud/gcp/cloud_vm/: feast_env.tpl  main.tf  outputs.tf  startup_script.sh  variables.tf
src/deployml/terraform/modules/grafana/cloud/gcp/cloud_run/: main.tf  variables.tf
src/deployml/terraform/modules/mlflow/cloud/gcp/cloud_run/: main.tf  outputs.tf  variables.tf
src/deployml/terraform/modules/mlflow/cloud/gcp/cloud_sql_postgres/: main.tf  outputs.tf  variables.tf
src/deployml/terraform/modules/mlflow/cloud/gcp/cloud_vm/: main.tf  outputs.tf  startup_script.sh  variables.tf
src/deployml/terraform/modules/mlflow/cloud/gcp/cloud_vm/templates/: docker_compose.tpl  fastapi_app.tpl  fastapi_dockerfile.tpl  feast_config.tpl  feast_dockerfile.tpl  feast_env.tpl  mlflow_dockerfile.tpl  systemd_service.tpl
src/deployml/terraform/modules/wandb/cloud/gcp/cloud_run/: main.tf  variables.tf
src/deployml/terraform/modules/wandb/cloud/gcp/cloud_vm/: main.tf  variables.tf
src/deployml/utils/: constants.py  helpers.py
tutorials/aws/: index.html
tutorials/gcp/: index.html
tutorials/overview/: index.html
