[project]
name = "deployml"
version = "0.0.1"
description = "Infra for academia"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"typer",
"pyyaml",
"jinja2",
"rich"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["deployml"]

[project.scripts]
deployml = "deployml.cli.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
